# VideoPlayer

./: .gitignore  CMakeLists.txt  mod.json
.github/workflows/: build.yml  ffmpeg.yml
include/: VideoPlayer.hpp
pl_mpeg/: pl_mpeg.h
src/: VideoPlayer.cpp  tests.cpp
